--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "gray-matter": "4.0.3",
     "js-cookie": "3.0.5",
     "new-component": "5.0.2",
-    "next": "^15.0.4",
+    "next": "14.2.15",
     "next-mdx-remote": "5.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-feather": "2.0.10"
   }
 }
